<resources>
    <string name="app_name">"Status Portugal"</string>
    <string name="app_version">Version 9/1/2022 Build 1</string>
    <string name="app_header">Statistics</string>
    <string name="latest_post">Latest Update</string>
    <string name="loading_info">Loading... Please wait...</string>
    <string name="name_day">Day</string>
    <string name="active_cases_name">Active Cases</string>
    <string name="recovered_cases">Recovered Cases</string>
    <string name="deaths_name">Deaths</string>
    <string name="surveilance_name">Cases in Surveilance</string>
    <string name="confirmed_name">Confirmed Cases</string>
    <string name="previous_day_name">Previous Day</string>
    <string name="more_info_name">More Information from</string>
    <string name="variation_name">Variation</string>
    <string name="internados_total_name">Total Interned</string>
    <string name="interned_uci">Interned in ICU</string>
    <string name="interned_enfermaria">Interned in Nursery</string>
    <string name="confirmed_north">Confirmed North: </string>
    <string name="confirmed_center">Confirmed Center: </string>
    <string name="confirmed_lisbonvaledotejo">Confirmed Lisbon Vale Tejo: </string>
    <string name="confirmed_alentejo">Confirmed Alentejo: </string>
    <string name="confirmed_algarve">Confirmed Algarve: </string>
    <string name="confirmed_açores">Confirmed Açores: </string>
    <string name="confirmed_madeira">Confirmed Madeira: </string>
    <string name="confirmed_f_09">Confirmed Female 0–9: </string>
    <string name="confirmed_f_1019">Confirmed Female 10–19: </string>
    <string name="confirmed_f_2029">Confirmed Female 20–29: </string>
    <string name="confirmed_f_3039">Confirmed Female 30–39: </string>
    <string name="confirmed_f_4049">Confirmed Female 40–49: </string>
    <string name="confirmed_f_5059">Confirmed Female 50–59: </string>
    <string name="confirmed_f_6069">Confirmed Female 60–69: </string>
    <string name="confirmed_f_7079">Confirmed Female 70–79: </string>
    <string name="confirmed_f_80plus">Confirmed Female 80+: </string>
    <string name="confirmed_m_09">Confirmed Male 0–9: </string>
    <string name="confirmed_m_1019">Confirmed Male 10–19: </string>
    <string name="confirmed_m_2029">Confirmed Male 20–29: </string>
    <string name="confirmed_m_3039">Confirmed Male 30–39: </string>
    <string name="confirmed_m_4049">Confirmed Male 40–49: </string>
    <string name="confirmed_m_5059">Confirmed Male 50–59: </string>
    <string name="confirmed_m_6069">Confirmed Male 60–69: </string>
    <string name="confirmed_m_7079">Confirmed Male 70–79: </string>
    <string name="confirmed_m_80plus">Confirmed Male 80+: </string>
    <string name="deaths_north">Deaths North: </string>
    <string name="deaths_center">Deaths Center: </string>
    <string name="deaths_lisbonvaledotejo">Deaths Lisbon Vale Tejo: </string>
    <string name="deaths_alentejo">Deaths Alentejo: </string>
    <string name="deaths_algarve">Deaths Algarve: </string>
    <string name="deaths_açores">Deaths Açores: </string>
    <string name="deaths_madeira">Deaths Madeira: </string>
    <string name="deaths_f_09">Deaths Female 0–9: </string>
    <string name="deaths_f_1019">Deaths Female 10–19: </string>
    <string name="deaths_f_2029">Deaths Female 20–29: </string>
    <string name="deaths_f_3039">Deaths Female 30–39: </string>
    <string name="deaths_f_4049">Deaths Female 40–49: </string>
    <string name="deaths_f_5059">Deaths Female 50–59: </string>
    <string name="deaths_f_6069">Deaths Female 60–69: </string>
    <string name="deaths_f_7079">Deaths Female 70–79: </string>
    <string name="deaths_f_80plus">Deaths Female 80+: </string>
    <string name="deaths_m_09">Deaths Male 0–9: </string>
    <string name="deaths_m_1019">Deaths Male 10–19: </string>
    <string name="deaths_m_2029">Deaths Male 20–29: </string>
    <string name="deaths_m_3039">Deaths Male 30–39: </string>
    <string name="deaths_m_4049">Deaths Male 40–49: </string>
    <string name="deaths_m_5059">Deaths Male 50–59: </string>
    <string name="deaths_m_6069">Deaths Male 60–69: </string>
    <string name="deaths_m_7079">Deaths Male 70–79: </string>
    <string name="deaths_m_80plus">Deaths Male 80+: </string>
    <string name="deaths_f">Female Deaths: </string>
    <string name="deaths_m">Male Deaths: </string>
    <string name="stats_name">Statistics</string>
    <string name="settings_name">About</string>
    <string name="recomendations_name">Recomendations</string>
    <string name="copied_to_clipboard">%name% copied to clipboard!</string>
    <string name="confirmados_m">"Confirmed Male: "</string>
    <string name="confirmados_f">"Confirmed Female: "</string>
    <string name="website_info">"Click here to access an interactive website to know more about the current Restrictions.\nhttps://pandemiaclara.sapo.pt/ © sapo.pt "</string>
    <string name="button_acess">Open</string>
    <string name="recomend_string_1"><![CDATA[
<html>
<head>
	<title></title>
</head>
<body>
<h3>Fundamental actions:</h3>

<ul>
	<li>&nbsp;When sneezing or coughing make sure to cover your mouth and nose with a tissue or with your forearm. 🤧</li>
	<li>&nbsp;Wash your hands frequently with soap and water or use an alcohol-based solution. 🙌🏻</li>
	<li>&nbsp;Avoid making contact with people with a minimal distance of two meters. ⚠️</li>
	<li>&nbsp;Always wear a mask and help protect yourself and others.&nbsp;😷</li>
	<li>&nbsp;If you feel unwell stay at home, isolate and contact your national health service.&nbsp;🤧</li>
</ul>
</body>
</html>
]]></string>
    <string name="recomend_string_2"><![CDATA[
<html>
<head>
	<title></title>
</head>
<body>
<h3>While going out:</h3>

<ol>
	<li>&nbsp;If there is the indication of mandatory use of the mask, make sure to do it before leaving home. 😷</li>
	<li>&nbsp;Throw your tissues in the bin.&nbsp;🗑️</li>
	<li>&nbsp;Wash or disinfect your hands after touching in a foreign object or a surface. 💧</li>
	<li>&nbsp;Avoid using public transportation. 🚍</li>
	<li>&nbsp;Avoid paying in cash, use your bank card or your bank app to make payments. 💶</li>
	<li>&nbsp;Have tissues in your pockets in order to cover your fingers while touching on surfaces. 💁</li>
	<li>&nbsp;Keep a two-meter distance with other people. &harr;️</li>
	<li>&nbsp;If you take your pet for a walk avoid having contact with other animals, people or objects unnecessarily. 🐾</li>
	<li>&nbsp;Avoid touching your face or mask.. 👀</li>
</ol>
</body>
</html>
]]></string>
    <string name="recomend_string_3"><![CDATA[
<h3>If you have any questions</h3>
<p>📞 Call +351 808 24 24 24 📞</p>
]]></string>
    <string name="recomend_string_4"><![CDATA[
<html>
<head>
	<title></title>
</head>
<body>
<h3>Most common symptoms</h3>

<ul>
	<li>&nbsp;fever</li>
	<li>&nbsp;dry cough</li>
	<li>&nbsp;tiredness</li>
</ul>

<h3>Less common symptoms</h3>

<ul>
</ul>

<ul>
	<li>&nbsp;aches and pains</li>
	<li>&nbsp;sore throat</li>
	<li>&nbsp;diarrhoea</li>
	<li>&nbsp;conjunctivitis</li>
	<li>&nbsp;headache</li>
	<li>&nbsp;loss of taste or smell</li>
	<li>&nbsp;a rash on skin, or discolouration of fingers or toes</li>
</ul>

<h3>Serious&nbsp;symptoms</h3>

<ul>
</ul>

<ul>
	<li>&nbsp;difficulty breathing or shortness of breath</li>
	<li>&nbsp;chest pain or pressure</li>
	<li>&nbsp;loss of speech or movement</li>
</ul>


<p>Seek immediate medical attention if you have serious symptoms. <strong>Always call</strong> before visiting your doctor or health facility.</p>

<p>People with mild symptoms who are otherwise healthy should manage their symptoms at home.</p>

<p>On average it takes 5&ndash;6 days from when someone is infected with the virus for symptoms to show, however it can take up to 14 days.</p>
</body>
</html>
]]></string>
    <string name="about_app">About this App</string>
    <string name="app_credit">App Development by José Rodrigues © 2021,22\nEnglish translations by Guilherme Soeiro\n\nThis App uses the following libraries:\ncom.github.f0ris.sweetalert:library:1.6.2\ncom.zsoltsafrany:needle:1.0.0\nnl.joery.animatedbottombar:library:1.0.9\ncom.github.DonMat:searchablespinner:v1.0.1\ncom.daimajia.androidanimations\n\nSource-code available on GitHub\nhttps://github.com/JoseGamerPT/StatusPortugalAPP\n\nData Source, JSON API by VOST PORTUGAL / DSSG PORTUGAL | COMMUNITY INFORMATION SOURCES</string>
    <string name="save">Save</string>
    <string name="no_internet">Can\'t connect to the server. Please check your internet connection.</string>
    <string name="refresh_name">Retry</string>
    <string name="cancel_name">Cancel</string>
    <string name="call">Call</string>
    <string name="internados_new_name">"Interned: "</string>
    <string name="variation_new_cases">variation)</string>
    <string name="open_github">Click to Open the GitHub Page 🌐</string>
    <string name="concelho_name">Counties</string>
    <string name="concelho_tip">Select a County from the list to get more details.</string>
    <string name="concelho_select">Select County</string>
    <string name="concelho_selected">County</string>
    <string name="district_name">District</string>
    <string name="ars_name">Health Region</string>
    <string name="incidence_name">Incidence</string>
    <string name="incidence_cat">Incidence Category</string>
    <string name="incidence_risk">Incidence Risk</string>
    <string name="population_name">Population</string>
    <string name="population_density">Population Density</string>
    <string name="concelho_none">There is no Data for that County.</string>
    <string name="missing_data">\?</string>
    <string name="name_vac">Vaccination</string>
    <string name="vac_admin">Vaccines Administered</string>
    <string name="vac_first">1st Dose</string>
    <string name="vac_secnd">2nd Dose</string>
    <string name="vac_total">Vaccines Administered Balance</string>
    <string name="moredata_name">More Data</string>
    <string name="click_2load">Long Press to load.</string>
    <string name="website2_info">Click here to access an website to view more data about this topic."</string>
    <string name="data_info">Where does this data come from?</string>
    <string name="about_data">Data comes from communitary sources, maintained by community members. This data is extracted from OFICIAL data provided by the responsible authorities. This data may be delayed in relation to those issued recently.</string>
    <string name="slogan">Be Patient 😷 or be Patient ⏳?</string>
    <string name="incidencia_nacional">National Incidence</string>
    <string name="incidencia_continental">Continental Incidence</string>
    <string name="rt_nacional">National R</string>
    <string name="rt_continente">Continental R</string>
    <string name="vac_fixed_title">Total Administered Vaccines</string>
    <string name="costa_quadrado">Click here to access an interactive website to know more about the current risk matrix.\nhttps://quadradinhodocosta.pt/ © quadradinhodocosta@gmail.com</string>
</resources>