<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/concelhos"
        android:icon="@drawable/ic_concelho"
        android:title="@string/concelho_name" />

    <item
        android:id="@+id/vac"
        android:icon="@drawable/ic_vac"
        android:title="@string/name_vac" />

    <item
        android:id="@+id/stats"
        android:title="@string/stats_name"
        android:icon="@drawable/ic_stats" />

    <item
        android:id="@+id/recomendations"
        android:title="@string/recomendations_name"
        android:icon="@drawable/ic_recomedations" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings_name"
        android:icon="@drawable/ic_information" />

</menu>