<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/aboutScroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/aboutfooter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_horizontal"
                    android:text="@string/app_version"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/aboutheader"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/aboutheader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_blue"
                    android:elevation="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/about_app"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/aboutheader2" />

                <TextView
                    android:id="@+id/aboutheader2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/background_darkmode"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_horizontal"
                    android:paddingTop="50dp"
                    android:paddingBottom="56dp"
                    android:text="@string/app_credit"
                    android:textColor="?android:attr/textColorPrimaryInverse"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/githubbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/round_back_grey"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/open_github"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/aboutheader2"
                    app:layout_constraintEnd_toEndOf="@+id/aboutheader2"
                    app:layout_constraintStart_toStartOf="@+id/aboutheader2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>