<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.josegamerpt.statusportugal.fragments.fragment_statistics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/latestdata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/scroll_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                        android:id="@+id/latestheader"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/latest_post"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/latestheader2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0"
                        android:gravity="center_horizontal"
                        android:text="@string/name_day"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/latestinfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_back_grey"
                    android:gravity="center"
                    android:text="@string/loading_info"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/variationdata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/scroll_background3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/variationdataheader1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/variation_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/variationdataheader2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0"
                        android:gravity="center_horizontal"
                        android:text="@string/name_day"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/variationdatainfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_back_grey"
                    android:gravity="center"
                    android:text="@string/loading_info"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/yesterdaydata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/scroll_background4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/yesterdayHead"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/previous_day_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/yesterdayHeader2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0"
                        android:gravity="center_horizontal"
                        android:text="@string/name_day"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/yestedayInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_back_grey"
                    android:gravity="center"
                    android:text="@string/loading_info"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/totaldata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/scroll_background2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/moredataheader1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/more_info_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/moredataheader2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="0"
                        android:gravity="center_horizontal"
                        android:text="@string/name_day"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/totaldatainfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_back_grey"
                    android:gravity="center"
                    android:text="@string/loading_info"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
